  McCann.

o MATH-274: Fixed detection of not positive definite matrices in
  Cholesky decomposition

o MATH-280: The behavior of the bracket method in
  UnivariateRealSolverUtils has been changed to return successfully
  when a tentative bracketing interval has a root exactly at one of
  its end points. Previously, such intervals triggered an exception.

Changes:

o Changed the return type of the various interpolation algorithms to
  the specific implementation of UnivariateRealFunction each one uses
  Thanks to Gilles Sadowski.

o Completed internationalization of all error messages

o Integration algorithms now can have both relative and absolute
  accuracy settings.

o The analysis package has been reorganized with several sub-packages.

o The ODE integrators now support several step handlers at once,
  instead of just one.  This is more consistent with event handlers
  management.  The setStepHandler method has therefore been replaced
  by addStephandler, the getStepHandler method has been replaced by
  getStepHandlers which returns a Collection and a clearStepHandlers
  method has been added.

o Events handlers in the ODE package now also provide the switching
  function variation (increasing/decreasing) when an event occurs

o Clarified the ODE package by breaking in into several sub-packages
  and renaming classes (SwitchingFunctions/EventHandler,
  SwitchingFunctionsHandler/CombinedEventsManager)

o The FirstOrderDifferentialEquations, FirstOrderIntegrator and
  FixedStepHandler interfaces now extends Serializable, allowing
  integrators, problems and handlers to be embedded into users
  Serializable classes.

o Replaced public no argument constructors with IDENTITY or ZERO
  static instances for immutable classes Vector3D and Rotation.

o Greatly improved RealMatrixImpl and BigMatrixImpl performances, both
  in terms of speed and in terms of temporary memory footprint.

o Starting with version 2.0 of the library, the minimal version of the